--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,14 @@ body {
 	padding: 10px;
 	display: table;
 	margin: auto;
+	background: #83B5D1
 }
 h1 {
 	text-align: center;
-}
-div {
-	outline: 1px solid #aaa;
+	border-radius: 10px;
+	border: 3px solid #000;
+	padding: 12px;
+	background: #fff;
 }
 a:link {
 	text-decoration: none;
@@ -32,14 +34,42 @@ a:active {
 .button-holder {
 	width: 170px;
 	float: left;
-	margin-left: 3px;
 }
 .button {
-	width: 60px;
+	width: 55px;
 	padding: 8px;
-	margin: 4px;
+	margin: 3px;
 	float: left;
 	text-align: center;
+	cursor: pointer;
+	border: 3px solid #000;
+	border-radius: 10px;
+	font-weight: bold;
+	background: #fff;
+}
+
+.disabled {
+	cursor: default;
+	border-color: #aaa;
+	color: #aaa; 
+}
+
+.button:hover {
+	background-color: #ddd;
+}
+.disabled:hover {
+	background-color: #fff;
+}
+.bubble {
+	background: #fff;
+	border-radius: 10px;
+	border: 3px solid #000;
+	padding: 8px;
+	padding-bottom: 0px;
+	margin-bottom: 10px;
+}
+.social {
+	margin-left:2px;
 }
 .image-holder {
 	width: 617px;
@@ -53,6 +83,7 @@ a:active {
 	width: 160px;
 	padding: 4px;
 	float: left;
+	margin-left: 5px;
 }
 .about-head {
 	font-weight: bold;
