--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Arial, helvetica, sans-serif;
+	font-family: Verdana, Helvetica, Arial, sans-serif;
 	width: 960px;
 	height: 600px;
 	padding: 10px;
@@ -7,12 +7,14 @@ body {
 	margin: auto;
 	background: #83B5D1
 }
-h1 {
+h1,h3 {
 	text-align: center;
-	border-radius: 10px;
-	border: 3px solid #000;
-	padding: 12px;
-	background: #fff;
+	margin: 1px;
+}
+h3 {
+	margin-bottom:5px;
+	font-weight:normal;
+	font-style:italic;
 }
 a:link {
 	text-decoration: none;
@@ -42,7 +44,7 @@ a:active {
 	float: left;
 	text-align: center;
 	cursor: pointer;
-	border: 3px solid #000;
+	border: 0px solid #000;
 	border-radius: 10px;
 	font-weight: bold;
 	background: #fff;
@@ -63,13 +65,14 @@ a:active {
 .bubble {
 	background: #fff;
 	border-radius: 10px;
-	border: 3px solid #000;
+	border: 0px solid #000;
 	padding: 8px;
-	padding-bottom: 0px;
+	padding-bottom: 3px;
 	margin-bottom: 10px;
 }
 .social {
 	margin-left:2px;
+	padding-bottom:0px;
 }
 .image-holder {
 	width: 617px;
@@ -80,14 +83,15 @@ a:active {
 	left: 2px;
 }
 .about-holder {
-	width: 160px;
+	width: 155px;
 	padding: 4px;
 	float: left;
-	margin-left: 5px;
+	margin-left: 10px;
 }
 .about-head {
 	font-weight: bold;
 	font-size: 18px;
+	text-align: center;
 }
 .about-text {
 	margin-top: -12px;
